...
        <include
            android:id="@+id/viewUserName"
            layout="@layout/view_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@id/recyclerview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewUserImage"
            bind:loading="@{user.loading}"
            bind:text="@{user.data.name}" />

...
